# LLM-Powered-News-Research-Tool

./: README.md  faiss_tutorial.py  main.py  model.py  news_text.txt  pyproject.toml  sample_text.csv  textloader_demo.py
