[project]
name = "news_research_tool"
version = "0.1.0"
description = ""
authors = [
    {name = "disha",email = "dishagopani05@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "huggingface-hub (>=0.30.2,<0.31.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "unstructured (>=0.17.2,<0.18.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "langchain-google-genai (>=2.1.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
